Fix: html overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,7 @@
 // Global resets
 html {
   background-color: var(--off-white);
-  // width: 100vw;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 body {
